# Madison

./: .gitignore  .pre-commit-config.yaml  README.md  backend_report.md  docker-compose.dev.yml  push-to-madison-v2.ps1  pyrefly.toml
Core_Components/: README.md
MarketMind/: Current_market_analysis_report.md  README.md  final_market_analysis_report-2.md  n8n-marketminds-workflow.json
MarketMind/Code/: README.md  agents.py  app.py  main.py  tasks.py
MarketMind/Updates/: 06-30-2025_Update.md  07-07-2025_Update.md  18_07_2025_Update.md  2025-06-23_update.md
Social-Media-Scraping/social-media-scraping-v2/: .renderignore  DEPLOY_CHECKLIST.md  Dockerfile  LAUNCH_CHECKLIST.md  QUICK_DEPLOY.md  README.md  RENDER_DEPLOY.md  STREAMLIT_DEPLOY.md  app.py  app_combined.py  (+5 more)
SurveyAnalysis/: csv_datatype_Shivani.py
backend/: Dockerfile  api.py  app.py  asset_classifier.py  brand_auditor.py  brand_guideline_extractor.py  brand_guideline_generator.py  pyproject.toml  test_integration.py
backend/src/: ai.py  api.py  asset_classifier.py  brand_auditor.py  brand_guideline_extractor.py  brand_guideline_generator.py  config.py  database.py  models.py
backend/src/services/: ml_service.py
backend/src/typography/: siamese_manager.py
backend/test/: test_smart_audit.py  test_tolerance.py
backend/tests/: test_color_audit.py  test_layout_classifier.py  test_smart_audit.py
backend/tests/typography/: test_auditor.py
brandguide.ai/: docker-compose.dev.yml
frontend/: .dockerignore  App.tsx  Dockerfile  index.html  package-lock.json  package.json  types.ts  vite.config.ts
(+69 files in other folders)
