[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.125.0",
    "opencv-python>=4.12.0.88",
    "pdf2image>=1.17.0",
    "pillow>=12.0.0",
    "pytesseract>=0.3.13",
    "python-multipart>=0.0.21",
    "scikit-learn>=1.7.2",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "uvicorn>=0.38.0",
]
